# traur

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  FIX.md  README.md  ROADMAP.md
data/: CLAUDE.md  patterns.toml
hook/: CLAUDE.md  traur-hook.rs  traur.hook
pkg/: CLAUDE.md  PKGBUILD  PKGBUILD-bin
rules/gtfobins/: gtfobins_analysis.rhai
rules/malware/: checksum_analysis.rhai  curl_pipe.rhai  install_script_analysis.rhai  pkgbuild_analysis.rhai  shell_analysis.rhai
rules/network/: source_url_analysis.rhai
rules/reputation/: aur_comments_analysis.rhai  bin_source_verification.rhai  git_history_analysis.rhai  github_stars.rhai  maintainer_analysis.rhai  metadata_analysis.rhai  name_analysis.rhai  orphan_takeover_analysis.rhai  pkgbuild_diff_analysis.rhai
src/: bench.rs  coordinator.rs  lib.rs  main.rs
src/features/: CLAUDE.md  mod.rs
src/features/aur_comments_analysis/: mod.rs
src/features/bin_source_verification/: CLAUDE.md  mod.rs
src/features/checksum_analysis/: CLAUDE.md  mod.rs
src/features/git_history_analysis/: CLAUDE.md  mod.rs
src/features/github_stars/: mod.rs
src/features/gtfobins_analysis/: CLAUDE.md  mod.rs  patterns.rs
src/features/install_script_analysis/: CLAUDE.md  mod.rs  patterns.rs
src/features/name_analysis/: mod.rs  (+1 more)
src/shared/: CLAUDE.md  aur_comments.rs  aur_git.rs  aur_rpc.rs  bulk.rs  cache.rs  config.rs  github.rs  mod.rs  models.rs  output.rs  patterns.rs  rule_registry.rs  rules.rs  scoring.rs  signal_registry.rs
tests/: CLAUDE.md  feature_tests.rs  output_tests.rs  rule_tests.rs
tests/configs/: malware.toml
(+22 files in other folders)
