[package]
name = "traur"
version = "0.1.3"
edition = "2024"
description = "Heuristic security scanner for AUR packages"
license = "MIT"

[[bin]]
name = "traur"
path = "src/main.rs"

[[bin]]
name = "traur-hook"
path = "hook/traur-hook.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
colored = "2"
strsim = "0.11"
rayon = "1.10"
flate2 = "1.0"
indicatif = "0.17"
